[package]
name = "grrs"
edition = "2021"
version = "0.1.0"
authors = ["Luís Abeno <luis.abeno@gmail.com>"]
license = "MIT"
description = "A tool to search files like grep"
readme = "README.md"
homepage = "https://github.com/luis-abeno/grrs"
repository = "https://github.com/luis-abeno/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# Make tests work with the name used in the tutorial
[[bin]]
name = "grrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
anyhow = "1.0.78"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
assert_fs = "1.1.0"